fixed spacing

--- a/EthanD_website/staticfiles/css/main.css
+++ b/EthanD_website/staticfiles/css/main.css
@@ -1,4 +1,20 @@
+html,
+body {
+    height: 100%;
+    margin: 0;
+}
+section {
+    height: 100vh;
+}
+
 h2 {
     color:white
+}
+
+.i-am-centered { 
+  align-content: center;
+  border: 3px solid green;
+  padding: 10px;
+
 }
 
